<resources>
    <string name="app_name">Topping</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_menu_sell">Sell</string>
    <string name="drawer_menu_sales_history">Sales History</string>
    <string name="drawer_menu_buy_airtime">Buy Airtime</string>
    <string name="drawer_menu_notifications">Notifications</string>
    <string name="drawer_menu_special_offers">Special Offers</string>
    <string name="drawer_menu_topping_chat_support">Topping Chat (Support)</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="label_vendor_code">Vendor Code: %1$d</string>
    <string name="label_please_signin">To continue, please authenticate using one of these options</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_select_carrier">Select a carrier:</string>
    <string name="label_select_amount">Select an amount:</string>
    <string name="hint_select_amount">Purchase amount</string>
    <string name="label_phone_number">Phone number:</string>
    <string name="label_write_correct_phone_number">Be sure to write the right phone number!</string>
    <string name="button_send_topping">Send Topping!</string>
    <string name="label_become_vendor">Become a vendor!</string>
    <string name="contentdescription_topping_logo">Topping Logo</string>
    <string name="title_insert_pin">Personal Identification Number</string>
    <string name="content_insert_pin">Create a 4 digits PIN code to protect your account. This will be used to restrict access to third parties to use the application. </string>
    <string name="pin_insert_hint">PIN</string>
    <string name="pin_confirm_hint">Confirm PIN</string>
    <string name="button_ok">Ok</string>
    <string name="label_applied">Applied</string>
    <string name="label_paid_question">Paid?</string>

</resources>
