<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pin_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.globalpaysolutions.topping.ui.activities.PinCode">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:text="@string/title_insert_pin"
            />
        <TextView
            android:id="@+id/tvContentPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_insert_pin"/>

        <!--<LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number|textPassword"
                android:textSize="20sp"
                android:gravity="center"
                android:maxLength="1"
                android:layout_weight="1"
                android:id="@+id/digit1">
                <requestFocus/>
            </EditText>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLength="1"
                android:inputType="number|textPassword"
                android:textSize="20sp"
                android:id="@+id/digit2"/>
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="1"
                android:inputType="number|textPassword"
                android:textSize="20sp"
                android:id="@+id/digit3"/>
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="1"
                android:inputType="number|textPassword"
                android:textSize="20sp"
                android:id="@+id/digit4"/>
        </LinearLayout>-->

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="18sp"
            android:gravity="center"
            android:maxLength="4"
            android:hint="@string/pin_insert_hint"
            android:width="200dp"
            android:id="@+id/etPincode"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="18sp"
            android:gravity="center"
            android:maxLength="4"
            android:hint="@string/pin_confirm_hint"
            android:width="200dp"
            android:id="@+id/etConfirmPincode"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnClose"
            android:text="@string/button_ok"
            android:layout_gravity="end"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/color_white"
            android:onClick="SetPinCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--<Button
            android:id="@+id/btnClose"
            android:text="@string/button_ok"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/ActivityVerticalCustomMargin"
            android:background="@drawable/btn_effect_ripple_green"
            android:textColor="@color/color_white"
            android:onClick="SetPinCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>-->


    </LinearLayout>
</RelativeLayout>
